--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native": "0.74.0",
     "react-native-safe-area-context": "^4.3.4",
     "react-native-screens": "^3.17.0",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
